fix navigation spacing

--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,30 +1,34 @@
 .menu-tab {
   position: absolute;
-  top: 50%;
-  right: 6px;
+  top: 49%;
+  right: 12px;
   height: 6px;
   width: 6px;
   border: 3px solid transparent;
   border-top: 3px solid white;
 }
 
-.nav-back {
+.nav {
   height: 60px;
   background-color: #1E7FC3;
   color: white;
   font-size: 14px;
-  width: 100%;
-  .nav {
-    text-align: center;
-    ul {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      li {
-        position: relative;
-        padding: 1em;
-        cursor: pointer;
-      }
-    }
+  width: 100vw;
+}
+
+.nav-links {
+  display: block;
+  margin: 0 auto;
+  width: 80%;
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+  align-content: space-between;
+  li {
+    position: relative;
+    padding: 1.5em 2em;
+    cursor: pointer;
   }
 }
